kustomize/base/django-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: svc-django-app
spec:
  selector:
    app: django-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
