kustomize/base/gateway.yaml
# Gateway listening for HTTP on port 80
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: django
  annotations:
    # Tell Traefik to use Let's Encrypt for TLS
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: traefik-tls-cert
