kustomize/base/django-gatewayapi.yaml
# Gateway listening for HTTP on port 80
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
---
# HTTPRoute to direct requests to the service
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: django-service-route
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - "django.localhost"
    - "django-prod.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: django-service
          port: 80
